# maze-game

./: CMakeLists.txt  README.md  build.py
include/engine/: base_object.h  game_object.h  scene.h  types.h
include/engine/components/: component.h  transform.h
include/engine/system/: engine.h
include/engine/system/gfx/: renderer.h  window.h
include/engine/utils/: logger.h
include/game/: player.h
src/: main.cpp
src/engine/: game_object.cpp
src/engine/components/: component.cpp  transform.cpp
src/engine/system/: engine.cpp
src/engine/system/gfx/: renderer.cpp  window.cpp
src/game/: player.cpp
